Small correction to the API and PostService.

--- a/wwwroot/app/post/post-list.component.html
+++ b/wwwroot/app/post/post-list.component.html
@@ -1,3 +1,7 @@
 <pre>
     Post List Component
+    <div *ngFor="let post of posts"
+         (click)="gotoPost(post)" class="post">
+      {{hero.name}}
+    </div>
 </pre>
