--- a/wwwroot/app/post/post-list.component.html
+++ b/wwwroot/app/post/post-list.component.html
@@ -1,4 +1,12 @@
-<pre>
-    <div>Post List Component</div>
-    <post [current]="post" *ngFor="let post of posts" (click)="gotoDetail(post)"></post>
-</pre>
+<h2>Posts</h2>
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Title</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr [post]="post" *ngFor="let post of posts" (click)="gotoDetail(post)"></tr>
+    </tbody>
+</table>
