--- a/wwwroot/styles.css
+++ b/wwwroot/styles.css
@@ -9,13 +9,23 @@ h2, h3 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
 }
+h1 {
+  font-size: 1.8em;
+  color: #999;
+  margin-bottom: 0;
+}
+h2 {
+  font-size: 1.2em;
+  color: #999;
+  margin-bottom: 0;
+}
 body {
   margin: 2em;
 }
-body, input[text], button {
+/*body, input[text], button {
   color: #888;
   font-family: Cambria, Georgia;
-}
+}*/
 a {
   cursor: pointer;
   cursor: hand;
